# CellPaintMONO

./: .gitignore  README.md  environment.yml  main.py  microsplit_env.yml  pyproject.toml  setup.py
cellpaintmono/: __init__.py  comparison.py  dataloading.py  io.py  plotting.py  preprocessing.py
cellpaintmono.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cellpaintmono/microsplit/: __init__.py  io.py  workflow.py
cellpaintmono/profiling/: __init__.py  aggregation.py  comparison.py
cellpaintmono/reproducibility/: __init__.py  data_loading.py  metrics.py  visualization.py
cellprofiler_notebooks_analysis/: distribution_distance_analysis.py
cellprofiler_pipelines/: 1_illumination_correction.cppipe  2_main_analysis.cppipe
data/orf_experiment/: README.md
scripts/: README.md  run_microsplit_combine.py  run_microsplit_predict.py
