[project]
name = "cellpaintmono"
version = "0.1.0"
description = "A library for analyzing and comparing Cell Painting data with MONO predictions"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.18,<2.0",
    "scipy>=1.7,<2.0",
    "pandas>=1.3,<3.0",
    "scikit-learn>=0.24,<2.0",
    "matplotlib>=3.3,<4.0",
    "seaborn>=0.11,<1.0",
    "plotly>=5.0,<6.0",
    "pycytominer>=1.0,<2.0",
    "tifffile>=2020.0.0",
    "pyyaml>=5.0",
    "tqdm>=4.60",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
    "jupyter>=1.0",
]

microsplit = [
    "torch>=2.0",
    "torchvision>=0.15",
    "careamics>=0.0.8,<=0.0.12",
    "imagecodecs<=2024.9.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-exclude = ["notebooks/*"]
